kernel/vfs: Fix some potential edge cases around vnode creation.

Noticed as part of investigating #18805.

Change-Id: I158126979996f8527728d073ac2101f2f834bfb2